style: fix mobile overflow

--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ body {
   font-weight: 300;
   padding: 0;
   margin: 0;
+  overflow-x: hidden;
   color: rgb(154, 154, 154);
   max-width: 100vw;
   display: -webkit-box;
@@ -47,7 +48,7 @@ body {
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
-  width: 100vw;
+  max-width: 100vw;
 }
 
 p,
@@ -125,7 +126,7 @@ h1 {
 }
 
 .intro-wrap {
-  z-index: 2;
+  z-index: 100;
   padding: 2em;
   margin-top: -2rem;
   display: -webkit-box;
